aptconfdir = $(sysconfdir)/apt

sources_list_ddir = $(aptconfdir)/sources.list.d
dist_sources_list_d_DATA = sources.list.d/rtems-4.6.list
dist_sources_list_d_DATA += sources.list.d/rtems-4.7.list

vendors_list_ddir = $(aptconfdir)/vendors.list.d
dist_vendors_list_d_DATA = vendors.list.d/rtems.list

gpgdir = $(aptconfdir)/gpg
dist_gpg_DATA = gpg/gpg-pubkey-eac29b6f-3fe1f458

noinst_HEADERS = rtems-apt-conf.spec
