#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT([rtems-apt-conf],[0.0],[http://www.rtems.org/bugzilla])
AC_CONFIG_SRCDIR([sources.list.d/rtems-4.6.list])
AC_CONFIG_AUX_DIR([.])
AM_INIT_AUTOMAKE([foreign dist-bzip2 no-dist-gzip 1.9])
AC_CONFIG_FILES([Makefile
rtems-apt-conf.spec
])
AC_OUTPUT
